kubernetes/rbac/network-policies/nats-policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nats-network-policy
  namespace: url-shortener
  labels:
    app: nats
    tier: messaging
spec:
  podSelector:
    matchLabels:
      app: nats
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: shortener
    ports:
    - protocol: TCP
      port: 4222
  - from:
    - podSelector:
        matchLabels:
          app: analytics
    ports:
    - protocol: TCP
      port: 4222
